--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -129,14 +129,14 @@
                   alt="team" />
                 <!-- social icons -->
                 <div class="social-icons">
-                  <a href="https://www.linkedin.com/in/harshit9270/"><span class="fa fa-linkedin"></span></a>
-                  <a href="https://github.com/harshit9270"><span class="fa fa-github"></span></a>
+                  <a href="https://www.linkedin.com/in/harshit-sharma-945i/"><span class="fa fa-linkedin"></span></a>
+                  <a href="https://github.com/me-harshit"><span class="fa fa-github"></span></a>
                 </div>
                 <!-- social icons -->
               </div>
             </div>
             <div class="caption-text">
-              <a href="https://meharshit.xyz" class="memberName">
+              <a href="https://me-harshit.netlify.app" class="memberName">
                 <h4>Harshit Sharma</h4>
               </a>
               <p>Web Developer</p>
