--- a/views/courselanding.ejs
+++ b/views/courselanding.ejs
@@ -100,7 +100,9 @@
       Lorem ipsum dolor sit amet consectetur.
     </h3>
     <!-- Get Started Btn -->
-    <button class="ui inverted grey button" id="web-btn">Get Started</button>
+    <a href="/webhome">
+       <button class="ui inverted grey button" id="web-btn">Get Started</button>
+    </a>
     <!-- Bottom Strip -->
     <div class="web-bottom-strip">
       <img class="web-strip-image" src="https://raw.githubusercontent.com/actions/starter-workflows/master/icons/html.svg" alt="html-image">
