--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -78,11 +78,13 @@
 
             <div class="field">
                 <label>Your Name</label>
-                <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly required>
+                <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly disabled
+                    required>
             </div>
             <div class="field">
                 <label>Your Email</label>
-                <input type="email" name="email" placeholder="Your Email" value="<%= email %>" readonly required>
+                <input type="email" name="email" placeholder="Your Email" value="<%= email %>" readonly disabled
+                    required>
             </div>
             <div class="field">
                 <label>Any Suggestions?</label>
