--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -78,12 +78,12 @@
 
             <div class="field">
                 <label>Your Name</label>
-                <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly disabled
+                <input type="text" name="name" placeholder="Your name" value="<%= username %>" readonly
                     required>
             </div>
             <div class="field">
                 <label>Your Email</label>
-                <input type="email" name="email" placeholder="Your Email" value="<%= email %>" readonly disabled
+                <input type="email" name="email" placeholder="Your Email" value="<%= email %>" readonly 
                     required>
             </div>
             <div class="field">
