--- a/views/contribute.html
+++ b/views/contribute.html
@@ -202,9 +202,8 @@
         <li><a href="/contact">Contact</a></li>
         <li class="tooltip" id="userProfile">
           <span class="myChip" style="margin: 10px 30px;">
-            <img
-              src="https://cdn5.vectorstock.com/i/thumb-large/54/69/male-user-icon-vector-8865469.jpg"
-              id="picture" alt="Person" width="96" height="96">
+            <img src="https://cdn5.vectorstock.com/i/thumb-large/54/69/male-user-icon-vector-8865469.jpg" id="picture"
+              alt="Person" width="96" height="96">
             <span id="chipName">Guest</span>
           </span>
           <span class="tooltiptext">
@@ -214,29 +213,28 @@
               href="/logout">Logout</a>
             <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="regBtn"
               href="/register">Login/Register</a>
-            </span>
-          </li>
+          </span>
+        </li>
       </ul>
     </div>
   </nav>
-  
+
   <ul class="sidenav" id="mobile-demo" style="background-color: #2c7873;">
     <br />
     <li class="tooltip" id="userProfile">
       <span class="myChip" style="margin: 10px 30px;">
-        <img
-        src="https://cdn5.vectorstock.com/i/thumb-large/54/69/male-user-icon-vector-8865469.jpg"
-          id="picture1" alt="Person" width="96" height="96">
-          <span id="chipName1">Guest</span>
-        </span>
-        <span class="tooltiptext" id="t1">
-          <h6 id="username1">Guest</h6>
-          <h6 id="email1">guest@guest.com</h6>
-          <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="logBtn1"
+        <img src="https://cdn5.vectorstock.com/i/thumb-large/54/69/male-user-icon-vector-8865469.jpg" id="picture1"
+          alt="Person" width="96" height="96">
+        <span id="chipName1">Guest</span>
+      </span>
+      <span class="tooltiptext" id="t1">
+        <h6 id="username1">Guest</h6>
+        <h6 id="email1">guest@guest.com</h6>
+        <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="logBtn1"
           href="/logout">Logout</a>
-          <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="regBtn1"
-            href="/register">Login/Register</a>
-        </span>
+        <a class="waves-effect waves-light btn profBtn" style="margin: 10px auto;" id="regBtn1"
+          href="/register">Login/Register</a>
+      </span>
     </li>
     <li><a href="/blogs" style=" color: white;">Blogs</a></li>
     <li><a href="/resources" style=" color: white;">Resources</a></li>
@@ -244,7 +242,7 @@
     <li><a href="/community" style=" color: white;">Community</a></li>
     <li><a href="/contact" style=" color: white;">Contact</a></li>
   </ul>
-  
+
 
   <div id="container">
 
@@ -325,102 +323,104 @@
         two<br> and remove or keep that as per utility.</p>
     </div>
 
-      <div style="text-align: center;margin: 75px 0;margin-top: 120px;">
-    <p>Have a look on others contributions as well.</p>
-    <a href="/usercontributions" class="waves-effect waves-light btn">See Contributions<i
-        class="material-icons right">remove_red_eye</i></a>
-  </div>
-    
+    <div style="text-align: center;margin: 75px 0;margin-top: 120px;">
+      <p>Have a look on others contributions as well.</p>
+      <a href="/usercontributions" class="waves-effect waves-light btn">See Contributions<i
+          class="material-icons right">remove_red_eye</i></a>
+    </div>
+
   </div>
 
 
 
   <!-- Floating button -->
 
-  <div class="fixed-action-btn" id="myFl">
-    <a class="btn-floating btn-large black myFloatingBtn">
-      <img src="public/images/logo.png" alt="" style="width: 60px;margin: 10px -1px;filter: invert();" />
-    </a>
-    <ul>
-      <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
-      </li>
-      <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
 
-          <img src="public/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
-        </a>
-      </li>
-
-      <li style="margin: 12px 0px;">
-
-        <a class="btn-floating btn-large black" id="brightness">
-          <i class="fa fa-moon-o" style="color: white;"></i>
-        </a>
-
-      </li>
-
-    </ul>
-  </div>
-
-   <!-- Footer -->
+  <!-- Footer -->
 
   <!-- <footer class="page-footer" style="background-color: #1a1a1a;margin-top:36px;"> -->
-    <footer class="page-footer" style="background-color: #323232;margin-top:36px;">
+  <footer class="page-footer" style="background-color: #323232;margin-top:36px;">
+    <div class="container">
+      <div class="row">
+        <div style="text-align: center;margin: 75px 0;">
+          <h2>Let’s stay connected.</h2>
+          <form action="/newsletter" method="POST" style="margin: 30px 0px;">
+            <input type="email" name="email" required placeholder="Enter your Email"
+              style="width:40%;margin-right: 20px;color: white;" required>
+            <button id="newsBtn" type="submit">Subscribe</button>
+          </form>
+          <p>Sign up to receive our newsletter and exclusive updates.</p>
+          <div style="margin-top: 45px;">
+            <a href="https://www.facebook.com/JssAcademyOfTechnicalEducationnoida/" class="socials"
+              style="color: #1b6ca8;"><i class="fa fa-facebook-official"></i></a>
+            <a href="https://twitter.com/jssatenoida?lang=en" class="socials" style="color: #3282b8;"><i
+                class="fa fa-twitter-square"></i></a>
+          </div>
+        </div>
+        <hr>
+        <div class="col l3 offset-l1 s6">
+          <h5 class="white-text">Quick Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/blogs">Blogs</a></li>
+            <li><a class="grey-text text-lighten-3" href="/resources">Ebooks</a></li>
+            <li><a class="grey-text text-lighten-3" href="/usercontributions">User Contributions</a></li>
+            <li><a class="grey-text text-lighten-3" href="http://jsswire.herokuapp.com">Connect with wire</a></li>
+            <li><a class="grey-text text-lighten-3" href="/contribute">Contribute</a></li>
+          </ul>
+        </div>
+        <div class="col l3 offset-l1 s6">
+          <h5 class="white-text">Recent Blogs</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/blogs">What to do when entering a college?</a></li>
+            <li><a class="grey-text text-lighten-3" href="/blogs">What I Learned My Freshman Year of College</a></li>
+            <li><a class="grey-text text-lighten-3" href="/blogs">A glimpse into Async JavaScript</a></li>
+          </ul>
+        </div>
+        <div class="col l3 offset-l1 s6">
+          <h5 class="white-text">Contact</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="/contact">Contact Us</a></li>
+            <li><a class="grey-text text-lighten-3" href="/contact#team">Our Team</a></li>
+            <li><a class="grey-text text-lighten-3" href="/feedback">Feedback</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+    <div class="footer-copyright">
       <div class="container">
-        <div class="row">
-          <div style="text-align: center;margin: 75px 0;">
-            <h2>Let’s stay connected.</h2>
-            <form action="/newsletter" method="POST" style="margin: 30px 0px;">
-              <input type="email" name="email" required placeholder="Enter your Email"
-                style="width:40%;margin-right: 20px;color: white;" required>
-              <button id="newsBtn" type="submit">Subscribe</button>
-            </form>
-            <p>Sign up to receive our newsletter and exclusive updates.</p>
-            <div style="margin-top: 45px;">
-              <a href="https://www.facebook.com/JssAcademyOfTechnicalEducationnoida/" class="socials"
-                style="color: #1b6ca8;"><i class="fa fa-facebook-official"></i></a>
-              <a href="https://twitter.com/jssatenoida?lang=en" class="socials" style="color: #3282b8;"><i
-                  class="fa fa-twitter-square"></i></a>
-            </div>
-          </div>
-          <hr>
-          <div class="col l3 offset-l1 s6">
-            <h5 class="white-text">Quick Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="/blogs">Blogs</a></li>
-              <li><a class="grey-text text-lighten-3" href="/resources">Ebooks</a></li>
-              <li><a class="grey-text text-lighten-3" href="/usercontributions">User Contributions</a></li>
-              <li><a class="grey-text text-lighten-3" href="http://jsswire.herokuapp.com">Connect with wire</a></li>
-              <li><a class="grey-text text-lighten-3" href="/contribute">Contribute</a></li>
-            </ul>
-          </div>
-          <div class="col l3 offset-l1 s6">
-            <h5 class="white-text">Recent Blogs</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="/blogs">What to do when entering a college?</a></li>
-              <li><a class="grey-text text-lighten-3" href="/blogs">What I Learned My Freshman Year of College</a></li>
-              <li><a class="grey-text text-lighten-3" href="/blogs">A glimpse into Async JavaScript</a></li>
-            </ul>
-          </div>
-          <div class="col l3 offset-l1 s6">
-            <h5 class="white-text">Contact</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="/contact">Contact Us</a></li>
-              <li><a class="grey-text text-lighten-3" href="/contact#team">Our Team</a></li>
-              <li><a class="grey-text text-lighten-3" href="/feedback">Feedback</a></li>
-            </ul>
-          </div>
-  
-        </div>
+        <span>© &nbsp; jssconnect.herokuapp.com &nbsp; 2020</span>
+        <span style="margin-left: 20%;">JSSconnnect</span>
+        <a class="grey-text text-lighten-4 right" href="/privacy">Privacy Policy</a>
       </div>
-      <div class="footer-copyright">
-        <div class="container">
-          <span>© &nbsp; jssconnect.herokuapp.com &nbsp; 2020</span>
-          <span style="margin-left: 20%;">JSSconnnect</span>
-          <a class="grey-text text-lighten-4 right" href="/privacy">Privacy Policy</a>
-        </div>
-      </div>
-    </footer>
-  
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+  <script>
+    function addDarkmodeWidget() {
+      new Darkmode().showWidget();
+    }
+    window.addEventListener('load', addDarkmodeWidget);
+  </script>
+  <script>
+    const options = {
+      bottom: '64px', // default: '32px'
+      right: 'unset', // default: '32px'
+      left: '32px', // default: 'unset'
+      time: '0.5s', // default: '0.3s'
+      mixColor: '#fff', // default: '#fff'
+      backgroundColor: '#fff',  // default: '#fff'
+      buttonColorDark: '#100f2c',  // default: '#100f2c'
+      buttonColorLight: '#fff', // default: '#fff'
+      saveInCookies: false, // default: true,
+      label: '🌓', // default: ''
+      autoMatchOsTheme: true // default: true
+    }
+
+    const darkmode = new Darkmode(options);
+    darkmode.showWidget();
+  </script>
+
 
   <script>
     // JS for floating buuton
@@ -544,8 +544,8 @@
       logBtn.style.display = "block";
       logBtn1.style.display = "block";
       regBtn.style.display = "none";
-            regBtn1.style.display = "none";
-      
+      regBtn1.style.display = "none";
+
 
       chipName1.innerHTML = myUsername;
       name1.innerHTML = "<i class='material-icons' style='display:inline;margin:9px;'>verified_user</i>"
