--- a/views/blogs.html
+++ b/views/blogs.html
@@ -407,29 +407,7 @@
 
     <!-- Floating button -->
 
-    <div class="fixed-action-btn" id="myFl">
-        <a class="btn-floating btn-large black myFloatingBtn">
-            <img src="public/images/logo.png" alt="" style="width: 60px;margin: 10px -1px;filter: invert();" />
-        </a>
-        <ul>
-            <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
-            </li>
-            <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
 
-                    <img src="public/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
-                </a>
-            </li>
-
-            <li style="margin: 12px 0px;">
-
-                <a class="btn-floating btn-large black" id="brightness">
-                    <i class="fa fa-moon-o" style="color: white;"></i>
-                </a>
-
-            </li>
-
-        </ul>
-    </div>
 
     <!-- Footer -->
 
@@ -495,6 +473,31 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+    <script>
+        function addDarkmodeWidget() {
+            new Darkmode().showWidget();
+        }
+        window.addEventListener('load', addDarkmodeWidget);
+    </script>
+    <script>
+        const options = {
+            bottom: '64px', // default: '32px'
+            right: 'unset', // default: '32px'
+            left: '32px', // default: 'unset'
+            time: '0.5s', // default: '0.3s'
+            mixColor: '#fff', // default: '#fff'
+            backgroundColor: '#fff',  // default: '#fff'
+            buttonColorDark: '#100f2c',  // default: '#100f2c'
+            buttonColorLight: '#fff', // default: '#fff'
+            saveInCookies: false, // default: true,
+            label: '🌓', // default: ''
+            autoMatchOsTheme: true // default: true
+        }
+
+        const darkmode = new Darkmode(options);
+        darkmode.showWidget();
+    </script>
 
 
 
