--- a/views/register.html
+++ b/views/register.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="/index.css" />
   <link rel="stylesheet" href="/login.css">
   <link rel="stylesheet" href="/profile.css" />
-  
+
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/efd71d3ed7.js" crossorigin="anonymous"></script>
 
@@ -30,7 +30,8 @@
 <body>
   <nav id="navbar" style="background-color: #2c7873">
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo"><img src="public/images/logo.png" alt="" style="width: 75px;margin-top: 7px;filter: invert();" /></a>
+      <a href="/" class="brand-logo"><img src="public/images/logo.png" alt=""
+          style="width: 75px;margin-top: 7px;filter: invert();" /></a>
       <a href="/" class="brand-logo" id="logoText" style="margin-left: 75px; font-size: 2rem">JSS Connect</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul id="main-menu" class="right hide-on-med-and-down">
@@ -63,13 +64,14 @@
       <img src="public/images/bg.svg">
     </div>
     <div class="login-content">
-        <img src="public/images/avatar.svg">
-        <h2 class="title">Welcome</h2>
-        <!-- <p style="margin-bottom: 60px;">Glad to see you again</p> -->
+      <img src="public/images/avatar.svg">
+      <h2 class="title">Welcome</h2>
+      <!-- <p style="margin-bottom: 60px;">Glad to see you again</p> -->
 
 
-        <a href="/auth/google"> <button class="btn">Register with Google<i class="fa fa-google-plus" style="margin-left: 15px;"></i></button></a>
-        <a style="text-align:center;margin-top:30px;" href="/login">Existing User? Login here</a>
+      <a href="/auth/google"> <button class="btn">Register with Google<i class="fa fa-google-plus"
+            style="margin-left: 15px;"></i></button></a>
+      <a style="text-align:center;margin-top:30px;" href="/login">Existing User? Login here</a>
     </div>
 
   </div>
@@ -86,29 +88,7 @@
 
   <!-- Floating button -->
 
-  <div class="fixed-action-btn" id="myFl">
-    <a class="btn-floating btn-large black myFloatingBtn">
-      <img src="public/images/logo.png" alt="" style="width: 60px;margin: 10px -1px;filter: invert();" />
-    </a>
-    <ul>
-      <li><a href="/contact#team" class="btn-floating green myFloat">Team</a>
-      </li>
-      <li><a href="http://jsswire.herokuapp.com" class="btn-floating red myFloat">
-        
-        <img src="public/images/share.png" alt="" style="width: 30px;margin: 6px -1px;filter: invert();" />
-      </a>
-      </li>
 
-      <li style="margin: 12px 0px;">
-
-        <a class="btn-floating btn-large black" id="brightness">
-          <i class="fa fa-moon-o" style="color: white;"></i>
-        </a>
-
-      </li>
-
-    </ul>
-  </div>
 
   <!-- Footer -->
 
@@ -169,6 +149,31 @@
       </div>
     </div>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+  <script>
+    function addDarkmodeWidget() {
+      new Darkmode().showWidget();
+    }
+    window.addEventListener('load', addDarkmodeWidget);
+  </script>
+  <script>
+    const options = {
+      bottom: '64px', // default: '32px'
+      right: 'unset', // default: '32px'
+      left: '32px', // default: 'unset'
+      time: '0.5s', // default: '0.3s'
+      mixColor: '#fff', // default: '#fff'
+      backgroundColor: '#fff',  // default: '#fff'
+      buttonColorDark: '#100f2c',  // default: '#100f2c'
+      buttonColorLight: '#fff', // default: '#fff'
+      saveInCookies: false, // default: true,
+      label: '🌓', // default: ''
+      autoMatchOsTheme: true // default: true
+    }
+
+    const darkmode = new Darkmode(options);
+    darkmode.showWidget();
+  </script>
 
 
   <script>
@@ -186,15 +191,15 @@
 
     const brightness = document.getElementById('brightness');
     const foot = document.querySelector("footer");
-    const navbar = document.querySelector("nav"); 
-  const sidenav = document.querySelector('.sidenav');
+    const navbar = document.querySelector("nav");
+    const sidenav = document.querySelector('.sidenav');
     let count = 0;
     brightness.addEventListener("click", () => {
 
       if (count < 1) {
         count = 1;
         localStorage.setItem("theme", "dark");
-        
+
       }
       else if (count == 1) {
         count = 0;
@@ -216,10 +221,10 @@
       else {
         foot.style.backgroundColor = "#323232"
         sidenav.style.backgroundColor = "#2c7873";
-         navbar.style.backgroundColor = "#2c7873";
+        navbar.style.backgroundColor = "#2c7873";
         brightness.innerHTML = "<i class='fa fa-moon-o' style='color: white;'></i>"
-       }
-     }
+      }
+    }
 
     const inputs = document.querySelectorAll(".input");
 
