--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,127 +1,213 @@
 <%- include("header") %>
-<style>
-  body {
-    background: #f1f3f8;
-  }
-  .blog-container{
-    background:white;
-    color:black;
-    display:block;
-    margin:150px auto;
-    width:80%;
-    padding-bottom:90px;
-  }
-  .blog-box{
-    width:90%;
-    display:block;
-    margin:10px auto;
-  }
-  #headImg{
-    width: 100%;
-    display:block;
-    margin: 0px auto 20px auto;
-  }
-  .top-section{
-    padding:5px 40px;
-  }
-  #blog-heading{
-    margin-top:70px;
-    font-size:2.5rem;
-    color:#7510f7;
-    font-family: monospace;
-  }
-  /* AUTHOR SECTION */
-  .mid-section{
-    margin-top:0px;
-    display:flex;
-    align-items: center;
-    padding:10px 40px;
-  }
-  .img-box{
-    display:flex;
-    align-items: center;
-    justify-content: center;
+  <style>
+    body {
+      background: #f1f3f8;
     }
-  #authorImg{
-    width:40px;
-    height:40px;
-    margin-top:10px;
-    border-radius:100%;
-  }
-  #authorName{
-    text-transform: capitalize;
-  }
-  #blog-date{
-    margin-left:30px;
-  }
-  /* blog Content */
-  .bottom-section{
-    margin-top:30px;
-    padding:20px 40px;
-    margin-bottom: 40px;
-  }
-  #contentImg{
-    width: 100%;
-    display:block;
-    margin: 20px auto;
-  }
-  .social-section{
-    display:block;
-    padding:20px 40px;
-  }
-  .social-section i{
-    font-size:2rem;
-  }
- 
 
-  @media screen and (max-width:768px) {
-    .blog-conatiner{
-      width:100%;
+    .blog-container {
+      background: white;
+      color: black;
+      display: block;
+      margin: 150px auto;
+      width: 80%;
+      padding-bottom: 90px;
     }
-   
-  }
-</style>
-<!--Blog-->
-<div class="blog-container">
-  <img id="headImg" src="<%= blogData.imageurl %>" alt="headImg">
-  <div class="blog-box">
-   <div class="top-section">
-     <h2 style="text-align:left;" id="blog-heading"><%=blogData.title %> </h2>
-   </div>
-   <div class="mid-section">
-      <div class="img-box" style="display:flex;">
-        <img src="<%= blogData.authorImg%>" id="authorImg" alt="Contact Person">
-        <h2 id="authorName"><%= blogData.authorName %></h2>
-      </div>
-      <h2 style="color:blue;" id="blog-date">29-12-2020</h2>
-   </div>
-   <!-- Bottom Section -->
-   <div class="bottom-section">
-    <p style="font-size: 1.5rem;" id="content">
-      <%- blogData.blogcontent %>
-    </p>
-   </div>
-   <!--End of Bottom Section -->
 
-   <!-- Social Section -->
-   <div class="social-section">
-    <div class="ui mini right floated labeled button" tabindex="0">
-      <div class="ui red button">
-        <i class="heart icon"></i> Like
+    .blog-box {
+      width: 90%;
+      display: block;
+      margin: 10px auto;
+    }
+
+    #headImg {
+      width: 100%;
+      display: block;
+      margin: 0px auto 20px auto;
+    }
+
+    .top-section {
+      padding: 5px 40px;
+    }
+
+    #blog-heading {
+      margin-top: 70px;
+      font-size: 2.5rem;
+      color: #7510f7;
+      font-family: monospace;
+    }
+
+    /* AUTHOR SECTION */
+    .mid-section {
+      margin-top: 0px;
+      display: flex;
+      align-items: center;
+      padding: 10px 40px;
+    }
+
+    .img-box {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #authorImg {
+      width: 40px;
+      height: 40px;
+      margin-top: 10px;
+      border-radius: 100%;
+    }
+
+    #authorName {
+      text-transform: capitalize;
+    }
+
+    #blog-date {
+      margin-left: 30px;
+    }
+
+    /* blog Content */
+    .bottom-section {
+      margin-top: 30px;
+      padding: 20px 40px;
+      margin-bottom: 40px;
+    }
+
+    #contentImg {
+      width: 100%;
+      display: block;
+      margin: 20px auto;
+    }
+
+    .social-section {
+      display: block;
+      padding: 20px 40px;
+    }
+
+    .social-section i {
+      font-size: 2rem;
+    }
+
+    .ctext {
+      border: 2px dotted black;
+      border-radius: 10px;
+      font-size: 2rem;
+      color: black;
+      padding: 10px 20px;
+      width: 30%;
+      text-align: center;
+    }
+
+    .ctext h3 {
+      font-family: cursive;
+    }
+    #comment-input{
+      width:80%;
+      padding:10px;
+      border-radius: 5px;
+      margin-bottom: 10px;
+    }
+
+    @media screen and (max-width:768px) {
+      .blog-conatiner {
+        width: 100%;
+      }
+
+    }
+  </style>
+  <!--Blog-->
+  <div class="blog-container">
+    <img id="headImg" src="<%= blogData.imageurl %>" alt="headImg">
+    <div class="blog-box">
+      <div class="top-section">
+        <h2 style="text-align:left;" id="blog-heading">
+          <%=blogData.title %>
+        </h2>
       </div>
-      <a class="ui basic red left pointing label">
-        1,048
-      </a>
+      <div class="mid-section">
+        <div class="img-box" style="display:flex;">
+          <img src="<%= blogData.authorImg%>" id="authorImg" alt="Contact Person">
+          <h2 id="authorName">
+            <%= blogData.authorName %>
+          </h2>
+        </div>
+        <h2 style="color:blue;" id="blog-date">29-12-2020</h2>
+      </div>
+      <!-- Bottom Section -->
+      <div class="bottom-section">
+        <p style="font-size: 1.5rem;" id="content">
+          <%- blogData.blogcontent %>
+        </p>
+      </div>
+      <!--End of Bottom Section -->
+
+      <!-- Social Section -->
+      <div class="social-section">
+        <div class="ui mini right floated labeled button" tabindex="0">
+          <div class="ui red button">
+            <i class="heart icon"></i> Like
+          </div>
+          <a class="ui basic red left pointing label">
+            1,048
+          </a>
+        </div>
+        <div class="comment" style="float: right;margin-right: 1%;">
+          <button id="commentButton" style="outline:none;padding:10px;background-color: white;cursor: pointer;"><i
+              class="fa fa-comments" aria-hidden="true"></i></button>
+        </div>
+
+      </div>
+
     </div>
-    <div class="comment-box">
-      <input type="text" name="comment" value="" placeholder="enter Your Comment" id="comment-input">
-      <button id="save-comment">Submit</button>
+    <div id="uniqueId" style="display:none"><%= uniqueId %></div>
+    <div id="username" style="display:none">
+      <%= username %>
     </div>
-   </div>
-   
-  </div> 
-<div id="uniqueId" style="display:none"><%= uniqueId %></div>
-</div>
+    <div id="picture" style="display:none">
+      <%= picture %>
+    </div>
+    <div id="email" style="display:none">
+      <%= email %>
+    </div>
+
+    <!-- Comment Section -->
+    <!-- <div class="comment-box">
+  <input type="text" name="comment" value="" placeholder="enter Your Comment" id="comment-input">
+  <button id="save-comment">Submit</button>
+</div> -->
+
+    <!-- Comment Box to show various comments -->
+    <!-- <div id="comment-box" style="margin-top:100px;display:flex;flex-direction: column;align-items: flex-end;justify-content: center;">
+</div> -->
+    <!-- End of Comment Section -->
+
+
+  </div>
+
+  <!-- Comment box fomantic -->
+
+  <div class="ui sidebar comments right vertical wide menu" style="padding: 0 25px !important;">
+
+    <div class="ui threaded comments"  style="margin: 20px auto;">
+      <h3 class="ui dividing header">Responses</h3>
+
+     
+        <div class="field">
+          <input type="text" name="comment" value="" placeholder="enter Your Comment" id="comment-input">
+        </div>
+        <button id="save-comment" class="ui blue labeled icon button">
+          <i class="icon edit"></i> Respond
+        </button>
+        <div id="comment-box" style="margin: 20px auto;">
+        </div>
+
+    </div>
+
+
+  </div>
+
+
+
+
 <!-- Footer -->
 <%- include("footer") %>
 
@@ -135,38 +221,129 @@
       }
 </script> 
 <script>
-        
+         let commentButton = document.getElementById("commentButton");
+      commentButton.addEventListener("click", () => {
+
+        $('.ui.sidebar.comments')
+          .sidebar('setting', 'transition', 'scale down')
+          .sidebar('toggle')
+          ;
+
+      });
         const saveComment = document.getElementById("save-comment");
         const lon =456;
         const lat=350;
         const data = { lat, lon };
-       
+        const commentBox = document.getElementById("comment-box");
+        let previousLength=0;
       saveComment.addEventListener("click",(e)=>{
          saveCommentFunction();
+         getNewComment();
       })
         const uniqueId = document.getElementById("uniqueId").innerHTML;
         console.log(uniqueId);
-       async function saveCommentFunction(){
-        const commentInput = document.getElementById("comment-input").value;
-          const authorName="Aman";
-          const date = new Date().getDate();
-          console.log(date);
-          console.log("commentInput" + commentInput);
-          const data = { authorName,date,commentInput};
-          const options = {
+        const username = document.getElementById("username").innerHTML.trim();
+      const picture = document.getElementById("picture").innerHTML.trim();
+      const email = document.getElementById("email").innerHTML.trim();
+        // Function To get comments when page loads first time
+       // Function To get comments when page loads first time
+      async function getComment() {
+        console.log("function called");
+        let res = await fetch(`/getComment/${uniqueId}`);
+        let comment = await res.json();
+        previousLength = comment.length;
+        for (let i = 0; i < comment.length; i++) {
+          commentBox.innerHTML +=
+            ` <div class="comment">
+        <a class="avatar">
+          <img src="${comment[i].picture || '1234.jpg'}">
+        </a>
+        <div class="content">
+          <a class="author">${comment[i].authorName}</a>
+          <br>
+          <a class="author" style="font-weight: lighter;color: grey;">${comment[i].email}</a>
+          <div class="metadata">
+            <span class="date">${comment[i].date}</span>
+          </div>
+          <div class="text">
+            ${comment[i].commentInput}
+          </div>
+          <!-- <div class="actions">
+            <a class="reply">Reply</a>
+          </div> -->
+        </div>
+      </div>`;
+        }
+      }
+      getComment();
+      // function to get when new comment is updated
+      async function getNewComment() {
+        // console.log(commentBox);
+        console.log(" get new comment function called");
+        let res = await fetch(`/getComment/${uniqueId}`);
+        let comment = await res.json();
+        for (let i = previousLength; i < comment.length; i++) {
+          console.log(i, "i");
+          commentBox.innerHTML +=
+            ` <div class="comment">
+        <a class="avatar">
+          <img src="${comment[i].picture || '1234.jpg'}">
+        </a>
+        <div class="content">
+          <a class="author">${comment[i].authorName}</a>
+          <br>
+          <a class="author" style="font-weight: lighter;color: grey;">${comment[i].email}</a>
+          <div class="metadata">
+            <span class="date">${comment[i].date}</span>
+          </div>
+          <div class="text">
+            ${comment[i].commentInput}
+          </div>
+          <!-- <div class="actions">
+            <a class="reply">Reply</a>
+          </div> -->
+        </div>
+      </div>`;
+
+        }
+      }
+        // save comment function to save your comment
+       // save comment function to save your comment
+       async function saveCommentFunction() {
+        let commentInput = document.getElementById("comment-input").value;
+
+        let authorName = "Guest";
+
+        if (username.trim() != "") {
+          authorName = username;
+        }
+
+        // code to get date & time
+
+        var todaysDate = new Date().getDate();
+        var month = new Date().getMonth() + 1;
+        var year = new Date().getFullYear();
+        let date = todaysDate + "/" + month + "/" + year;
+
+        console.log("commentInput" + commentInput);
+        let data = { authorName, date, commentInput, uniqueId, email, picture };
+        let options = {
           method: 'POST',
-          headers:{
+          headers: {
             'Content-type': 'application/json'
           },
           body: JSON.stringify(data)
 
-       };
-        const res = await fetch('/savecomment',options);
-        console.log(res);
-        const value = await res.json();
-        console.log("after");
-        console.log(value);
-       }
+        };
+        let res = await fetch('/savecomment', options);
+        console.log(res, "response from backend for save");
+        console.log("comment saved");
+        makeInputNull();
+      }
+      function makeInputNull() {
+        document.getElementById("comment-input").value = "";
+      }
+
 </script>
 <script src="/blogs.js">
     console.log("Hello");
